remove payment
