# main/api/swagger/main.yaml
@@ -1,13 +1,122 @@
 ---
 swagger: "2.0"
 info:
-  description: "Crypto Market | Payment svc"
+  description: "continuous market | stack connector"
   version: "0.1.0"
-  title: "market.payment"
+  title: "market.stack_connector"
 schemes:
-#  - "https"
+  #  - "https"
   - "http"
 paths:
+  /market/{bid_id}:
+    get:
+      summary: "Get bid info by id"
+      operationId: "get_bid_by_id"
+      produces:
+        - "application/json"
+      parameters:
+        - name: "bid_id"
+          in: "path"
+          description: "ID of bid to return"
+          type: "integer"
+          format: "int64"
+          required: true
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/bid"
+        404:
+          description: "Bid not found"
+          schema:
+            $ref: "#/definitions/Error"
+        403:
+          description: "No access"
+          schema:
+            $ref: "#/definitions/Error"
+      security:
+        - api_key: [ ]
+
+    delete:
+      summary: "Cancel bid"
+      operationId: "cancel_bid"
+      consumes:
+        - "application/json"
+      produces:
+        - "application/json"
+      parameters:
+        - name: "bid_id"
+          in: "path"
+          description: "ID of bid to cancel"
+          required: true
+          type: "integer"
+          format: "int64"
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/Result"
+        403:
+          description: "No access"
+          schema:
+            $ref: "#/definitions/Error"
+        400:
+          description: "Incorrect data"
+          schema:
+            $ref: "#/definitions/Error"
+      security:
+        - api_key: [ ]
+
+  /bid:
+    get:
+      summary: "Get my bids"
+      operationId: "get_bids"
+      produces:
+        - "application/json"
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/bid"
+        403:
+          description: "No access"
+          schema:
+            $ref: "#/definitions/Error"
+      security:
+        - api_key: [ ]
+    post:
+      summary: "Create bid"
+      operationId: "create_bid"
+      consumes:
+        - "application/json"
+      produces:
+        - "application/json"
+      parameters:
+        - name: "object"
+          in: "body"
+          schema:
+            $ref: "#/definitions/bid"
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            type: "object"
+            properties:
+              bid_id:
+                type: "integer"
+                format: "int64"
+        403:
+          description: "No access"
+          schema:
+            $ref: "#/definitions/Error"
+        400:
+          description: "Incorrect data"
+          schema:
+            $ref: "#/definitions/Error"
+      security:
+        - api_key: [ ]
   /account/balance:
     get:
       consumes:
@@ -234,7 +343,6 @@ securityDefinitions:
     type: "apiKey"
     name: "api_key"
     in: "header"
-
 definitions:
   Error:
     type: "object"
@@ -243,3 +351,34 @@ definitions:
         type: "string"
       error_status_code:
         type: integer
+  Result:
+    type: "object"
+    properties:
+      status:
+        type: "string"
+      message:
+        type: "string"
+  bid:
+    type: "object"
+    properties:
+      bid_id:
+        type: "integer"
+        format: "int64"
+      user_id:
+        type: "integer"
+        format: "int64"
+      min_price:
+        type: "number"
+        multipleOf: 0.0000001
+      max_price:
+        type: "number"
+        multipleOf: 0.0000001
+      amount_to_buy:
+        type: "number"
+        multipleOf: 0.0000001
+      bought_amount:
+        type: "number"
+        multipleOf: 0.0000001
+      buy_speed:
+        type: "number"
+        multipleOf: 0.0000001
